[project]
name = "docs-download"
version = "0.1.0"
description = "A tool to scrape and download documentation sites (Mintlify and GitBook) to local Markdown files"
readme = "README.md"
authors = [
    { name = "Bob Liu", email = "akagi201@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx[socks]>=0.28.1",
    "beautifulsoup4>=4.14.3",
    "rich>=15.0.0",
    "click>=8.4.1",
    "markdown>=3.10.2",
    "html2text>=2025.4.15",
    "markdownify>=0.14.1",
    "playwright>=1.60.0",
]

[project.scripts]
mintlify-download = "mintlify_download.cli:main"
gitbook-download = "gitbook_download.cli:main"
mkdocs-download = "mkdocs_download.cli:main"
readme-download = "readme_download.cli:main"
stoplight-download = "stoplight_download.cli:main"
docusaurus-download = "docusaurus_download.cli:main"
webshare-download = "webshare_download.cli:main"
arc-blog-download = "arc_blog_download.cli:main"
circle-openapi-download = "circle_openapi_download.cli:main"
coinw-download = "coinw_download.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.15.14",
]

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"test_*.py" = ["B011"] # assert false

[tool.ruff.lint.isort]
known-first-party = ["mintlify_download", "coinw_download"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
